--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,5 +4,5 @@ on: [pull_request]
 
 jobs:
   lint:
-    uses: customerio/mobile-ci-tools/.github/workflows/ios-lint.yml@shared-ios-ci
+    uses: customerio/mobile-ci-tools/.github/workflows/ios-lint.yml@main
 
